--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@tensorflow-models/posenet": "^2.1.3",
     "@tensorflow/tfjs": "^1.2.11",
     "@tensorflow/tfjs-node": "^1.2.11",
+    "@types/express": "^4.17.1",
     "blueimp-load-image": "^2.24.0",
     "canvas": "^2.6.0",
+    "express": "^4.17.1",
     "global": "^4.4.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "serve": "ts-node ./server.ts"
   },
   "repository": {
     "type": "git",
