--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@tensorflow/tfjs": "^1.2.11",
     "@tensorflow/tfjs-node": "^1.2.11",
     "@types/express": "^4.17.1",
+    "@types/lodash": "^4.14.144",
     "blueimp-load-image": "^2.24.0",
     "canvas": "^2.6.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "lodash": "^4.17.15",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
